Don't duplicate dependencies in IDEA
The idea plugin doesn't handle dependencies added to both PROVIDED and COMPILE/RUNTIME scopes the way we would like: it removes them from all but PROVIDED. Correct this for exact duplicates. Transitive dependencies may need more work.

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
   compile localGroovy()
   compile 'org.codehaus.groovy:groovy-backports-compat23:2.3.5'
   testCompile gradleTestKit()
+  testCompile 'com.google.guava:guava:19.0'
 }
 
 group = 'org.inferred'
