Update Gradle version to 2.12
Updates Gradle version and wrapper binaries
and updates tests to conform to API breaks
introduced between the versions.

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
   id 'idea'
   id 'com.gradle.plugin-publish' version '0.9.1'
   id 'com.palantir.git-version' version '0.2.0'
+  id 'com.palantir.idea-test-fix' version '0.1.0'
 }
 
 repositories {
