Output stack trace when tests fail

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,12 @@ dependencies {
   testRuntime files(createClasspathManifest)
 }
 
+test {
+  testLogging {
+    exceptionFormat = 'full'
+  }
+}
+
 //// Publication //////////////////////////////////////////////////////////////////////
 
 group = 'org.inferred'
