--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ sourceCompatibility = '1.7'
 
 dependencies {
   compile localGroovy()
+  compile gradleApi()
   compile 'org.codehaus.groovy:groovy-backports-compat23:2.3.5'
   testCompile gradleTestKit()
 }
