--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
   compile 'org.codehaus.groovy:groovy-backports-compat23:2.3.5'
   testCompile gradleTestKit()
   testCompile 'com.netflix.nebula:nebula-test:7.0.0'
+  // So we can run tests directly from IntelliJ
+  testRuntime files(tasks.pluginUnderTestMetadata)
 }
 
 gradlePlugin {
