Make sure idea depends on pluginUnderTestMetadata so resources & classpath file are generated

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
   testRuntime files(tasks.pluginUnderTestMetadata)
 }
 
+tasks.idea.dependsOn 'pluginUnderTestMetadata'
+
 gradlePlugin {
   automatedPublishing = false
 
