--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
   id 'com.gradle.plugin-publish' version '0.9.7'
   id 'com.palantir.git-version' version '0.2.0'
   id 'com.palantir.idea-test-fix' version '0.1.0'
+  id 'nebula.maven-publish' version '5.1.0'
 }
 
 repositories {
