--- a/src/main/resources/org/inferred/gradle/apt-prefs.template
+++ b/src/main/resources/org/inferred/gradle/apt-prefs.template
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 <% if (!deps.empty) { %>\
 org.eclipse.jdt.apt.aptEnabled=true
 org.eclipse.jdt.apt.genSrcDir=${outputDir}
+org.eclipse.jdt.apt.genTestSrcDir=${testOutputDir}
 org.eclipse.jdt.apt.reconcileEnabled=true
 <% } else { %>\
 org.eclipse.jdt.apt.aptEnabled=false
