--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 jobs:
   compile:
-    docker: [{ image: 'circleci/openjdk:8u222-node' }]
+    docker: [{ image: 'circleci/openjdk:8u222-stretch-node' }]
     resource_class: large
     environment:
       CIRCLE_TEST_REPORTS: /home/circleci/junit
@@ -54,7 +54,7 @@ jobs:
           paths: [ project, .gradle/init.gradle ]
 
   check:
-    docker: [{ image: 'circleci/openjdk:8u222-node' }]
+    docker: [{ image: 'circleci/openjdk:8u222-stretch-node' }]
     environment:
       GRADLE_OPTS: -Dorg.gradle.jvmargs='-Xms3072m -Xmx3072m'
       _JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -XX:ErrorFile=/home/circleci/artifacts/hs_err_pid%p.log -XX:HeapDumpPath=/home/circleci/artifacts
@@ -73,7 +73,7 @@ jobs:
       - store_artifacts: { path: ~/artifacts }
 
   unit-test:
-    docker: [{ image: 'circleci/openjdk:8u222-node' }]
+    docker: [{ image: 'circleci/openjdk:8u222-stretch-node' }]
     environment:
       GRADLE_OPTS: -Dorg.gradle.jvmargs='-Xms3072m -Xmx3072m'
       _JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -XX:ErrorFile=/home/circleci/artifacts/hs_err_pid%p.log -XX:HeapDumpPath=/home/circleci/artifacts
@@ -92,7 +92,7 @@ jobs:
       - store_artifacts: { path: ~/artifacts }
 
   trial-publish:
-    docker: [{ image: 'circleci/openjdk:8u222-node' }]
+    docker: [{ image: 'circleci/openjdk:8u222-stretch-node' }]
     environment:
       GRADLE_OPTS: -Dorg.gradle.jvmargs='-Xms3072m -Xmx3072m'
       _JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -XX:ErrorFile=/home/circleci/artifacts/hs_err_pid%p.log -XX:HeapDumpPath=/home/circleci/artifacts
@@ -108,7 +108,7 @@ jobs:
       - store_artifacts: { path: ~/artifacts }
 
   publish:
-    docker: [{ image: 'circleci/openjdk:8u222-node' }]
+    docker: [{ image: 'circleci/openjdk:8u222-stretch-node' }]
     environment:
       GRADLE_OPTS: -Dorg.gradle.jvmargs='-Xms3072m -Xmx3072m'
       _JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -XX:ErrorFile=/home/circleci/artifacts/hs_err_pid%p.log -XX:HeapDumpPath=/home/circleci/artifacts
