--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
   id 'groovy'
   id 'idea'
   id 'com.gradle.plugin-publish' version '0.9.7'
-  id 'com.palantir.git-version' version '0.2.0'
+  id 'com.palantir.git-version' version '0.11.0'
   id 'com.palantir.idea-test-fix' version '0.1.0'
   id 'nebula.maven-publish' version '5.1.0'
 }
@@ -54,7 +54,7 @@ pluginBundle {
 
   plugins {
     processors {
-	  // id automatically picked up from equivalent gradlePlugin.plugins entry
+      id = 'org.inferred.processors'
       displayName = 'Processors plugin'
       description = 'Clean integration of Java 6+ annotation processors with the Eclipse and IDEA plugins'
       tags = ['java', 'annotation', 'processor']
@@ -64,5 +64,6 @@ pluginBundle {
 
 // Configure the publishPlugins task
 tasks.publish.dependsOn tasks.publishPlugins
+tasks.publishPlugins.onlyIf { versionDetails().isCleanTag }
 project.ext.'gradle.publish.key' = System.env["GRADLE_KEY"]
 project.ext.'gradle.publish.secret' = System.env["GRADLE_SECRET"]
